--- a/config/linters/reek.yml
+++ b/config/linters/reek.yml
@@ -1,12 +1,14 @@
-# TooManyInstanceVariables:
-#   enabled: false
-#   exclude: []
-#   max_instance_variables: 9
-# TooManyMethods:
-#   enabled: false
-#   exclude: []
-#   max_methods: 25
-# TooManyStatements:
-#   enabled: true
-#   max_statements: 7
-#   exclude: ["DeviseCreateUsers#change"]
+DuplicateMethodCall:
+  exclude: ["AuthConcerns"]
+FeatureEnvy:
+  enabled: false
+InstanceVariableAssumption:
+  enabled: false
+IrresponsibleModule:
+  enabled: false
+UncommunicativeVariableName:
+  enabled: false
+UtilityFunction:
+  enabled: false
+exclude_paths:
+  - db
