--- a/config/linters/rubocop.yml
+++ b/config/linters/rubocop.yml
@@ -4,6 +4,9 @@ AllCops:
     - 'db/*/*.rb'
     - 'spec/spec_helper.rb'
     - 'spec/rails_helper.rb'
+    - 'spec/*/*.rb'
+    - 'spec/*/*/*.rb'
+    - 'spec/*/*/*/*.rb'
     - 'lint'
     - 'Gemfile'
 
@@ -15,8 +18,6 @@ EmptyLinesAroundClassBody:
 
 LineLength:
   Max: 110
-  Exclude:
-    - 'spec/*/*.rb'
 
 MethodLength:
   Max: 10
@@ -24,7 +25,6 @@ MethodLength:
 BlockLength:
   Max: 5
   Exclude:
-    - 'spec/*/*.rb'
     - 'bin/*'
     - 'config/routes.rb'
     - 'config/*/*.rb'
