--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: ruby
 rvm:
   - 2.4.1
 before_install: gem install bundler -v 1.15.2
+script:
+  - bundle exec rake db:drop
+  - bundle exec rake db:create
+  - bundle exec rake db:migrate --trace
 addons:
   code_climate:
     repo_token: efde411d2e876ce4fd45042d8e90da55007e1d392b5fcc99d674466130002e3f
