Attempt to configure db host for local and travis

--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: db
+  host: <%= 'db' || 'localhost' %>
   username: postgres
   password:
   # For details on connection pooling, see Rails configuration guide
