--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,51 @@
 sudo: false
 language: ruby
 cache: bundler
+env:
+  - DOCKER_COMPOSE_VERSION = 1.14.0
 rvm:
   - 2.4.1
-before_install: gem install bundler -v 1.15.2
+before_install:
+  - gem install bundler -v 1.15.2
+  # update is required to update the repositories to see the new packages for
+  # Docker.
+  - sudo apt-get update
+
+  # Now we can install the newer docker-engine which is required for the newer
+  # docker-composer we will install next. The messy options are to force it to
+  # be non-interactive (normally it asks you a bunch of config questions).
+  - sudo apt-get install -o Dpkg::Options::="--force-confold" --force-yes -y docker-engine
+
+  # Print out the current docker-compose version. Once this reports 1.6+ then we
+  # do not need the following steps.
+  - docker-compose --version
+
+  # We need to update docker-compose to 1.14+. $DOCKER_COMPOSE_VERSION is provide from the `env`
+  # above.
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+
+  # Check that docker-compose is now running the latest version (or at least the
+  # one we specified). This is not to be confused with the version we printed
+  # before doing the update.
+  - docker-compose --version
+
+  # Setup your application stack. You may need to tweak these commands if you
+  # doing out-of-the-ordinary docker-compose builds.
+  - docker-compose pull
+  - docker-compose build
+  - docker-compose up
+
+  # You will want this for logging. If one of your containers does not build for
+  # whatever reason it's best to report that now before your tests start
+  # otherwise it can be really tricky to debug why tests are failing sometimes.
+  - docker ps
 script:
-  - bundle exec rake db:drop
-  - bundle exec rake db:create
-  - bundle exec rake db:migrate --trace
+  - docker-compose run --rm web rake db:create`  
+  - docker-compose run --rm web rake db:migrate` 
+  - docker-compose run --rm web rspec
 addons:
   code_climate:
     repo_token: efde411d2e876ce4fd45042d8e90da55007e1d392b5fcc99d674466130002e3f
