--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 before_install:
   - gem install bundler -v 1.15.2
   - docker-compose build
-  - docker-compose up
+  - docker-compose start
 
   # You will want this for logging. If one of your containers does not build for
   # whatever reason it's best to report that now before your tests start
